--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "passport": "^0.3.0",
     "serve-favicon": "~2.3.0",
     "stylus": "0.42.3"
   }
